# ainew

./: README.md  pyproject.toml
src/ecomm/: crew.py  main.py
src/ecomm/config/: agents.yaml  tasks.yaml
