[project]
name = "ecomm"
version = "0.1.0"
description = "ecomm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
ecomm = "ecomm.main:run"
run_crew = "ecomm.main:run"
train = "ecomm.main:train"
replay = "ecomm.main:replay"
test = "ecomm.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
